force-app/main/default/objects/clariti__PaymentMethod__mdt/clariti__PaymentMethod__mdt.object-meta.xml
<CustomObject>
    <label>Payment Method</label>
    <pluralLabel>Payment Methods</pluralLabel>
</CustomObject>