force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__EnableForCart__c.field-meta.xml
<CustomField>
    <fullName>clariti__EnableForCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines if the payment method is active for payment cart.</description>
    <inlineHelpText>Toggle to display the payment method in the payment cart</inlineHelpText>
    <label>Enable for Cart</label>
    <type>Checkbox</type>
</CustomField>