force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__EnableForRefunds__c.field-meta.xml
<CustomField>
    <fullName>clariti__EnableForRefunds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for Refunds</label>
    <type>Checkbox</type>
</CustomField>