force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__OptionalPaymentFields__c.field-meta.xml
<CustomField>
    <fullName>clariti__OptionalPaymentFields__c</fullName>
    <description>This field is to capture the comma separated list of optional fields to be displayed when this payment method is selected in the cart journey.</description>
    <inlineHelpText>Comma separated list of payment method specific payment fields to be captured as optional fields in the cart journey</inlineHelpText>
    <label>Optional Payment Fields</label>
    <type>TextArea</type>
</CustomField>