force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__PaymentGatewayEvent__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentGatewayEvent__c</fullName>
    <description>Specify name of the Gateway Event that would be sent to override the default behavior</description>
    <inlineHelpText>Specify name of the Gateway Event that would be sent to override the default behavior</inlineHelpText>
    <label>Payment Gateway Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>