force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__PaymentGatewayProcessorClass__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentGatewayProcessorClass__c</fullName>
    <description>Specify name of the processor class to be used for payment gateway processing</description>
    <inlineHelpText>Specify name of the processor class to be used for payment gateway processing</inlineHelpText>
    <label>Payment Gateway Processor Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>