force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__PortalAccessible__c.field-meta.xml
<CustomField>
    <fullName>clariti__PortalAccessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines whether the payment method is accessible on the portal.</description>
    <inlineHelpText>Toggle to make the payment method available on the portal (Community Experience)</inlineHelpText>
    <label>Portal Accessible</label>
    <type>Checkbox</type>
</CustomField>