force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__ServiceFeeEnabled__c.field-meta.xml
<CustomField>
    <fullName>clariti__ServiceFeeEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Fee Enabled</label>
    <type>Checkbox</type>
</CustomField>