force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__ServiceFeeType__c.field-meta.xml
<CustomField>
    <fullName>clariti__ServiceFeeType__c</fullName>
    <label>Service Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>