force-app/main/default/objects/clariti__PaymentMethod__mdt/fields/clariti__ServiceFeeValue__c.field-meta.xml
<CustomField>
    <fullName>clariti__ServiceFeeValue__c</fullName>
    <label>Service Fee Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>